...
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        tools:context=".ui.movie_list.MovieListFragment">

        <TextView
            android:id="@+id/movie_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:paddingVertical="16dp"
            android:background="@color/blue"
            android:gravity="center"
...
