...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/movie_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_arrow"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
...
